Bug 703398 - IndexedDB: SQLite files with unknown schema versions should not be deleted. r=sicking, a=clegnitto.